# algflow

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
algflow/: __init__.py
algflow/algorithm/: alg_meta.py  algorithm.py  input.py  output.py  types.py
algflow/algorithm/params/: __init__.py  dag.py  errors.py  param_variable.py
algflow/algorithm/registry/: __init__.py  main.py  section_registry.py
algflow/algorithm/section/: main.py  metaclass.py  variable.py
algflow/cmd/: main.py  templates.py
algflow/common/: __init__.py  singleton.py  utils.py
algflow/data/: __init__.py  cache.py  container.py  dict_handler.py  handler.py  spec.py  store.py
algflow/inout/: asset.py
algflow/pipeline/: dag.py  main.py  param.py  param_override.py  simple_executor.py  type_guesser.py
algflow/tests/: param.yaml  tests_algorithm.py  tests_param.py
algflow/traits/: __init__.py
